2002-02-01  Fumitoshi UKAI  <ukai@debian.or.jp>

	* gcc -Wall -Werror safe
	* anchor.c (addMultirowsImg): unused variable: fi
	* display.c (redrawLineImage): unused variable: ncol
	* file.c (process_img): uninitialized variables: r2, ni, w0, i0, ismap
			unused variable: url, ext
	* file.c (loadHTMLstream): need volatile image_flag
	* image.c (image_index): int
	* image.c (getCharSize): need prototype
	* image.c (getImage): uninitialized variable: key
			return NULL
	* map.c (follow_map_menu): used only USE_IMAGE: px, py, map
	* map.c (newMapArea): used only USE_IMAGE: p, i, max
	* proto.h (addMultirowsImg): added
	* w3mimgdisplay.c (main): format string fix
	* w3mimgdisplay.c (DrawImage): need (Pixmap) cast

	* inflate.c: indent

2002-02-01  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* w3m-img merge (w3m-0.2.4+cvs-1.278-img-2.2.patch.gz)
	* NEWS: w3m-img merge
	* .cvsignore: add w3mimgdisplay, w3mimgsize
	* XMakefile: add image.c to SRCS 
		     add image.o to OBJS
	             add IMGDISPLAY, IMGSIZE
	* config.h.dist: USE_IMAGE, IMGSIZE, IMGDISPLAY
	* configure: add find_imlib
			ask use_image
		(config.h) add $imgtarget to EXT_TARGETS
			   $def_use_image
			   IMGSIZE, IMGDISPLAY
	* fm.h (MAX_IMAGE): added
	* fm.h (DEFAULT_PIXEL_PER_CHAR): fix for USE_IMAGE
	* fm.h (DEFAULT_PIXEL_PER_LINE): added
	* fm.h (B_REDRAW_IMAGE): added
	* fm.h (IMG_FLAG_SKIP): added
	* fm.h (IMG_FLAG_AUTO): added
	* fm.h (IMG_FLAG_START): added
	* fm.h (IMG_FLAG_STOP): added
	* fm.h (IMG_FLAG_NEXT): added
	* fm.h (IMG_FLAG_UNLOADED): added
	* fm.h (IMG_FLAG_LOADED): added
	* fm.h (IMG_FLAG_ERROR): added
	* fm.h (MapArea): added
	* fm.h (MapList): s/urls/alts/, add area
	* fm.h (ImageCache): added
	* fm.h (Image): added
	* fm.h (Anchor): add image
	* fm.h (Buffer): add imarklist, image_flag, need_reshape
	* fm.h (RG_FRAME_SRC): added
	* fm.h (ALIGN_MIDDLE): added
	* fm.h (ALIGN_TOP): added
	* fm.h (ALIGN_BOTTOM): added
	* fm.h (QuietMessage): added
	* fm.h (Imgdisplay): added